--- a/Makefile.in
+++ b/Makefile.in
@@ -5,7 +5,7 @@ CFLAGS	= $CFLAGS
 LDFLAGS = $LDFLAGS
 DEFS    = $DEFS
 INCDIR  = ../../src/include
-FASTCGI_OBJECTS = fastcgi.o protocol.o chunk.o
+FASTCGI_OBJECTS = fastcgi.o protocol.o chunk.o request.o
 
 all: monkey-fastcgi.so
 
