fcgi_context: Add module.
Contains struct fcgi_context and struct fcgi_context_list. It's
purpose is to assign unique thread id's and per thread contexts.

--- a/Makefile.in
+++ b/Makefile.in
@@ -5,7 +5,7 @@ CFLAGS	= $CFLAGS
 LDFLAGS = $LDFLAGS
 DEFS    = $DEFS
 INCDIR  = ../../src/include
-FASTCGI_OBJECTS = fastcgi.o protocol.o chunk.o request.o fcgi_fd.o fcgi_config.o
+FASTCGI_OBJECTS = fastcgi.o protocol.o chunk.o request.o fcgi_fd.o fcgi_config.o fcgi_context.o
 
 all: monkey-fastcgi.so
 
