config: Update example configuration.

--- a/conf/fastcgi.conf
+++ b/conf/fastcgi.conf
@@ -1,25 +1,44 @@
-[FASTCGI_SERVER]
-	ServerName php5-fpm1
-	ServerPath /var/run/php5-fpm.sock
+# [FASTCGI_SERVER]
+	# ServerName php5-fpm1
 
-[FASTCGI_SERVER]
-	ServerName php5-fpm2
-	ServerPath /var/run/php5-fpm.sock
+	# ServerAddr localhost:9000
+	# ServerPath /var/run/php5-fpm.sock
+
+	# Concurrent connections.
+	# MaxConnections 4
 
 [FASTCGI_SERVER]
 	ServerName test_server1
-	ServerPath /home/webber46/fcgi_test/fcgi_socket
 
-[FASTCGI_SERVER]
-	ServerName test_server2
-	ServerPath /home/webber46/fcgi_test/fcgi_socket
+	ServerAddr 127.0.0.1:7999
+	# ServerPath /var/run/fcgitest.sock
 
-[FASTCGI_LOCATION]
-	LocationName php5_location
-	ServerNames php5-fpm1 php5-fpm2
-	Match /*.php
+	# Concurrent connections.
+	MaxConnections 4
+
+
+# [FASTCGI_LOCATION]
+	# LocationName php5_location
+
+	# Space separated list of this locations servers.
+	# ServerNames php5-fpm1
+
+	# Keep connections alive. (Threads may stall if available
+	# concurrent connections is less then number of workers.)
+	# KeepAlive On
+
+	# Space separated list of match regex.
+	# Match /*.php
 
 [FASTCGI_LOCATION]
 	LocationName fcgitest
-	ServerNames test_server1 test_server2
+
+	# Space separated list of this locations servers.
+	ServerNames test_server1
+
+	# Keep connections alive. (Threads may stall if available
+	# concurrent connections is less then number of workers.)
+	KeepAlive On
+
+	# Space separated list of match regex.
 	Match /fcgitest
