fastcgi: Update minimal libfcgi config example.

--- a/conf/fastcgi.conf
+++ b/conf/fastcgi.conf
@@ -59,16 +59,12 @@
 	# Match /*.php
 
 ##
-## Example libfcgi configuration
+## Example minimal libfcgi TCP configuration
 ##
 # [FASTCGI_SERVER]
 	# ServerName test_server1
-	# ServerPath 127.0.0.1:7999
-	# ServerPath /var/run/fcgitest.sock
-	# MaxConnections 1
+	# ServerAddr 127.0.0.1:7999
 
 # [FASTCGI_LOCATION]
-	# LocationName fcgitest
 	# ServerNames test_server1
-	# KeepAlive Off
 	# Match /fcgitest
