--- a/conf/fastcgi.conf
+++ b/conf/fastcgi.conf
@@ -14,23 +14,27 @@
 ##
 #[FASTCGI_SERVER]
 	## Each server must have a unique name.
+	## (Required)
 	# ServerName php5-fpm1
 
 	## Depending on your version of php5-fpm, one of these should be
 	## enabled. ServerAddr is used in the default pool.d/www.conf on
 	## Debian Squeeze.
+	## (One of either required)
 	# ServerAddr 127.0.0.1:9000
 	# ServerPath /var/run/php5-fpm.sock
 
 	## Concurrent connections.
-	## Php5-fpm defaults to 5 workers.
+	## (Optional, default 1)
 	# MaxConnections 5
 
 #[FASTCGI_LOCATION]
 	## Each location should have a unique name for easier debugging.
+	## (Optional, default auto-generated)
 	# LocationName php5_location
 
 	## Space separated list of location servers.
+	## (Required)
 	# ServerNames php5-fpm1
 
 	## Keep FastCGI server connections alive. Please tune the
@@ -38,6 +42,7 @@
 	## count under [SERVER] in monkey.conf (Threads may stall if
 	## available concurrent connections is less then number of
 	## workers.)
+	## (Optional, default Off)
 	# KeepAlive On
 
 	## Space separated list of match regex. If regex overlapp with
@@ -50,6 +55,7 @@
 	## Match ^/var/htdocs/wordpress/(.*).php$
 	##
 	## This one will render all php scripts in any directory.
+	## (Required)
 	# Match /*.php
 
 ##
